welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n>=90) {
    ^nearHundred:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n>=190) {
    ^